--- a/coding/src/main/webapp/css/public.css
+++ b/coding/src/main/webapp/css/public.css
@@ -1,7 +1,6 @@
-/*dede58.com 做最好的织梦整站模板下载网站*/
 @charset "utf-8";
 /*通用样式开始*/
-*{ margin:0; padding:0;font-family:Microsoft Yahei,Verdana,Arial; font-size:12px;}
+*{ margin:0; padding:0;font-family:Microsoft Yahei,Verdana,Arial; }
 a{ text-decoration:none;  color: #666;}
 a:hover{ text-decoration:underline; color:#46b448;}
 li{ list-style:none;}
@@ -11,8 +10,7 @@ img{ border:none;}
 h1,h2,h3,h4{ font-weight:normal;}
 .clearfix:after{ content:""; clear:both; display:block;}
 .clearfix{ *zoom:1;}
-input{ border:none;}
-input{ outline:none; border:none;}
+
 .container{
     width: 1200px;
     margin: 0 auto;
@@ -25,6 +23,7 @@ input{ outline:none; border:none;}
     line-height: 30px;
     background: #f7f7f7;
     border-bottom: #eee solid 1px;
+	font-size: 12px;
 }
 .top li{
     float: left;
